test/parsing/errors/externUnclosedPair.chpl
extern {
const char* unterminatedStr = "unterminated
}
